# LLM-jp-4-RL

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
data_load/: aime2024.py  aime2025.py  aime2026.py  dolci_think_dpo_7b.py  dolci_think_rl_7b_math.py  download.py  dpo_jsonl.py  verl_dataset.py
docs/: evals.md  nemo-rl-dpo.md  olmo3_rl_settings.md
exp/dpo/: run_llmjp-4-8b_nemo-rl_dolci-think-dpo-7b.sh  run_llmjp-4-8b_nemo-rl_dolci-think-dpo-7b_multinode.sh  run_llmjp-4-8b_nemo-rl_dpo.sh  run_llmjp-4-8b_nemo-rl_dpo_multinode.sh
exp/eval/: 4gpu_val_aime_2024_2025_4gpuver.sh  Qwen3-val_aime_2024_2025.sh  READMe.md  llm-jp-4-32b-val_aime_2024_2025.sh  olmes_aime.sh  val_aime_2024_2025.sh  val_aime_2024_2025_qwen3.sh
exp/ex/: ex01.sh
exp/prod_model_RL/: run_llmjp-4-8b-prod_olomo3_code_multinode.sh  run_llmjp-4-8b-prod_olomo3_math.sh  run_llmjp-4-8b-prod_olomo3_math_dapo_multinode.sh  run_llmjp-4-8b-prod_olomo3_math_dapo_multinode_olmo3.sh  run_llmjp-4-8b-prod_olomo3_math_multinode.sh
exp/step1/: run_qwen3-8b.sh
exp/step2/: run_llmjp-4-8b-instruct-dev_phase1.sh  run_llmjp-4-8b_phase1.sh  run_llmjp-4-8b_phase2.sh
exp/step3/: run_llmjp-4-8b-instruct-dev_phase1_olmo3_math_aligned.sh  run_llmjp-4-8b-instruct-dev_phase1_olomo3_math.sh  (+1 more)
rewards/: ground_truth_utils.py  math_reward.py  math_utils.py  math_verify_verifier.py
scripts/: convert_nemo_rl_dcp_to_hf.sh  gpu_status.sh  merge_verl_fsdp_to_hf.sh
tests/: test_ground_truth_utils.py  test_math_reward.py  test_math_verifier_v2.py  test_math_verify_verifier.py
(+10 files in other folders)
