[project]
name = "0316-llm-jp-4-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "transformers>=4.55.2,<5.0.0",
    "vllm==0.11.0",
    "datasets>=3.0.0",
    "wandb>=0.23.0",
    "verl[vllm]",
    # flash-attn（Linux x86_64 のみに限定：aarch64 などで解決器が転ぶのを避ける）
    "flash-attn; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "numpy>=1.26.4",
    "ninja>=1.13.0",
    "packaging>=25.0",
    "setuptools>=79.0.1",
    "wheel>=0.45.1",
]

[tool.uv.sources]
# verlをeditableモードで参照
verl = { path = "deps/verl", editable = true }

# （オプション）flash-attnを使う場合
[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]